--- a/assets/main.html
+++ b/assets/main.html
@@ -99,32 +99,59 @@
             <div class="page__block page__block_faq">
                 <div class="page__content page__content_centered">
                     <div class="block-faq">
-                        <div class="block-faq__image"></div>
+                        <div class="block-faq__image" style="background-image: url('4-block.png')"></div>
                         <div class="block-faq__content">
                             <div class="block-faq__content__title">
                                 Зачем мне вокальный трек?
                             </div>
                             <div class="block-faq__content__list list" id="first-faq">
                                 <div class="list__item">
-                                    <div class="list__question list__question_opened" data-index="0">Избавиться от боязни сцены</div>
+                                    <div
+                                        class="list__question list__question_opened"
+                                        data-index="0"
+                                        data-replace-bg-image-src="4-block.png"
+                                        data-replace-bg-target=".block-faq .block-faq__image"
+                                    >
+                                        Избавиться от боязни сцены
+                                    </div>
                                     <div class="list__answer list__answer_opened" data-index="0">
                                         <div class="list__answer__content">Мы поможем вам справиться с тревожностью и страхом перед публичными выступлениями. Наша программа включает в себя техники релаксации, дыхательные упражнения и практические занятия, направленные на развитие уверенности и коммуникабельности.</div>
                                     </div>
                                 </div>
                                 <div class="list__item">
-                                    <div class="list__question" data-index="1">Познакомиться с интересными людьми</div>
+                                    <div
+                                        class="list__question"
+                                        data-index="1"
+                                        data-replace-bg-image-src="5-block-2.png"
+                                        data-replace-bg-target=".block-faq .block-faq__image"
+                                    >
+                                        Познакомиться с интересными людьми</div>
                                     <div class="list__answer" data-index="1">
                                         <div class="list__answer__content">В рамках курса вы сможете встретить единомышленников, которые разделяют ваши интересы и стремления. Мы организуем мероприятия, где можно пообщаться, поделиться опытом и расширить профессиональную сеть.</div>
                                     </div>
                                 </div>
                                 <div class="list__item">
-                                    <div class="list__question" data-index="2">Раскрыть возможности своего голоса</div>
+                                    <div
+                                            class="list__question"
+                                            data-index="2"
+                                            data-replace-bg-image-src="5-block-3.png"
+                                            data-replace-bg-target=".block-faq .block-faq__image"
+                                    >
+                                        Раскрыть возможности своего голоса
+                                    </div>
                                     <div class="list__answer" data-index="2">
                                         <div class="list__answer__content">Наши тренеры помогут вам раскрыть потенциал вашего голоса, научат правильно дышать, работать с интонацией и темпом речи. Вы получите инструменты для более эффективной коммуникации и выражения своих мыслей.</div>
                                     </div>
                                 </div>
                                 <div class="list__item">
-                                    <div class="list__question" data-index="3">Определиться с выбором будущей профессии</div>
+                                    <div
+                                            class="list__question"
+                                            data-index="3"
+                                            data-replace-bg-image-src="5-block-1.png"
+                                            data-replace-bg-target=".block-faq .block-faq__image"
+                                    >
+                                        Определиться с выбором будущей профессии
+                                    </div>
                                     <div class="list__answer" data-index="3">
                                         <div class="list__answer__content">Наш курс поможет вам лучше понять свои интересы и способности, а также предоставит информацию о различных профессиях, связанных с коммуникацией и публичными выступлениями. Вы сможете сделать осознанный выбор направления развития. </div>
                                     </div>
