--- a/assets/main.html
+++ b/assets/main.html
@@ -577,82 +577,84 @@
                             <div class="spoiler">
                                 <div class="spoiler__title">больше билетов</div>
                                 <div class="spoiler__content">
-                                    <div class="block-tickets__tickets">
-                                        <div class="ticket" style="background-image: url('7-block-1.png')">
-                                            <a class="ticket__link" href="#">
-                                                <div class="ticket__head">
-                                                    <div class="ticket__type">
-                                                        Мастер-класс
+                                    <div class="block-tickets__spoiler-content">
+                                        <div class="block-tickets__tickets">
+                                            <div class="ticket" style="background-image: url('7-block-1.png')">
+                                                <a class="ticket__link" href="#">
+                                                    <div class="ticket__head">
+                                                        <div class="ticket__type">
+                                                            Мастер-класс
+                                                        </div>
+                                                        <div class="ticket__price">
+                                                            3000р.
+                                                        </div>
                                                     </div>
-                                                    <div class="ticket__price">
-                                                        3000р.
+                                                    <div class="ticket__empty"></div>
+                                                    <div class="ticket__title">
+                                                        Название в пару строк
                                                     </div>
-                                                </div>
-                                                <div class="ticket__empty"></div>
-                                                <div class="ticket__title">
-                                                    Название в пару строк
-                                                </div>
-                                                <div class="ticket__description">
-                                                    Описание тоже в пару строк. Пару предложений буквально.
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="ticket" style="background-image: url('7-block-2.png')">
-                                            <a class="ticket__link" href="#">
-                                                <div class="ticket__head">
-                                                    <div class="ticket__type">
-                                                        Тренинг
+                                                    <div class="ticket__description">
+                                                        Описание тоже в пару строк. Пару предложений буквально.
                                                     </div>
-                                                    <div class="ticket__price">
-                                                        6500р.
+                                                </a>
+                                            </div>
+                                            <div class="ticket" style="background-image: url('7-block-2.png')">
+                                                <a class="ticket__link" href="#">
+                                                    <div class="ticket__head">
+                                                        <div class="ticket__type">
+                                                            Тренинг
+                                                        </div>
+                                                        <div class="ticket__price">
+                                                            6500р.
+                                                        </div>
                                                     </div>
-                                                </div>
-                                                <div class="ticket__empty"></div>
-                                                <div class="ticket__title">
-                                                    Название в пару строк
-                                                </div>
-                                                <div class="ticket__description">
-                                                    Описание тоже в пару строк. Пару предложений буквально.
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="ticket" style="background-image: url('7-block-3.png')">
-                                            <a class="ticket__link" href="#">
-                                                <div class="ticket__head">
-                                                    <div class="ticket__type">
-                                                        Мастер-класс
+                                                    <div class="ticket__empty"></div>
+                                                    <div class="ticket__title">
+                                                        Название в пару строк
                                                     </div>
-                                                    <div class="ticket__price">
-                                                        4000р.
+                                                    <div class="ticket__description">
+                                                        Описание тоже в пару строк. Пару предложений буквально.
                                                     </div>
-                                                </div>
-                                                <div class="ticket__empty"></div>
-                                                <div class="ticket__title">
-                                                    Название в пару строк
-                                                </div>
-                                                <div class="ticket__description">
-                                                    Описание тоже в пару строк. Пару предложений буквально.
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="ticket" style="background-image: url('7-block-7.png')">
-                                            <a class="ticket__link" href="#">
-                                                <div class="ticket__head">
-                                                    <div class="ticket__type">
-                                                        Лекция
+                                                </a>
+                                            </div>
+                                            <div class="ticket" style="background-image: url('7-block-3.png')">
+                                                <a class="ticket__link" href="#">
+                                                    <div class="ticket__head">
+                                                        <div class="ticket__type">
+                                                            Мастер-класс
+                                                        </div>
+                                                        <div class="ticket__price">
+                                                            4000р.
+                                                        </div>
                                                     </div>
-                                                    <div class="ticket__price">
-                                                        3000р.
+                                                    <div class="ticket__empty"></div>
+                                                    <div class="ticket__title">
+                                                        Название в пару строк
                                                     </div>
-                                                </div>
-                                                <div class="ticket__empty"></div>
-                                                <div class="ticket__title">
-                                                    Название в пару строк
-                                                </div>
-                                                <div class="ticket__description">
-                                                    Описание тоже в пару строк. Пару предложений буквально.
-                                                </div>
-                                            </a>
+                                                    <div class="ticket__description">
+                                                        Описание тоже в пару строк. Пару предложений буквально.
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <div class="ticket" style="background-image: url('7-block-7.png')">
+                                                <a class="ticket__link" href="#">
+                                                    <div class="ticket__head">
+                                                        <div class="ticket__type">
+                                                            Лекция
+                                                        </div>
+                                                        <div class="ticket__price">
+                                                            3000р.
+                                                        </div>
+                                                    </div>
+                                                    <div class="ticket__empty"></div>
+                                                    <div class="ticket__title">
+                                                        Название в пару строк
+                                                    </div>
+                                                    <div class="ticket__description">
+                                                        Описание тоже в пару строк. Пару предложений буквально.
+                                                    </div>
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
